--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       border-radius:22px; padding:12px 16px; cursor:pointer; transition:transform .06s ease, filter .2s ease;
       backdrop-filter: blur(10px) saturate(140%); -webkit-backdrop-filter: blur(10px) saturate(140%);
       box-shadow: 0 8px 20px rgba(0,0,0,.25), inset 0 1px 0 rgba(255,255,255,.06);
+      pointer-events:auto;
     }
     button:hover{filter:brightness(1.08)}
     button:active{transform:scale(.98)}
@@ -160,9 +161,9 @@
         </form>
         <div style="height:10px"></div>
         <div class="totals">
-          <div class="pill">Einnahmen: <strong id="t-income">0,00 €</strong></div>
-          <div class="pill">Ausgaben: <strong id="t-expense">0,00 €</strong></div>
-          <div class="pill" id="balance-pill">Saldo: <strong id="t-balance">0,00 €</strong></div>
+          <div class="pill">Einnahmen: <strong id="t-income">0,00 €</strong></div>
+          <div class="pill">Ausgaben: <strong id="t-expense">0,00 €</strong></div>
+          <div class="pill" id="balance-pill">Saldo: <strong id="t-balance">0,00 €</strong></div>
         </div>
 
         <div style="height:16px"></div>
@@ -188,7 +189,7 @@
       </aside>
     </div>
 
-    <p class="footer">⌘ iOS‑inspired, minimal · Firebase Auth + Firestore · Charts: Chart.js</p>
+    <p class="footer">⌘ iOS-inspired, minimal · Firebase Auth + Firestore · Charts: Chart.js</p>
   </div>
 
   <!-- Chart.js FIRST -->
@@ -212,11 +213,40 @@
     // THEME
     themeBtn.addEventListener('click', ()=>{ const html=document.documentElement; html.setAttribute('data-theme', html.getAttribute('data-theme')==='light'?'dark':'light'); if(window.__charts){ window.__charts.forEach(c=>c.destroy()); window.__charts=[]; renderCharts(currentMonthData()); }});
 
-    // AUTH
+    // AUTH with robust error feedback
     el('logout').addEventListener('click', ()=>signOut(auth));
-    el('login-form').addEventListener('submit', async (e)=>{ e.preventDefault(); const email=el('email').value.trim(); const pw=el('password').value; try{ await signInWithEmailAndPassword(auth,email,pw); el('auth-error').textContent=''; }catch(err){ el('auth-error').textContent=mapAuthError(err);} });
-    el('signup').addEventListener('click', async ()=>{ const email=el('email').value.trim(); const pw=el('password').value; if(!email||!pw){ el('auth-error').textContent='Bitte E-Mail & Passwort ausfüllen.'; return; } try{ await createUserWithEmailAndPassword(auth,email,pw); el('auth-error').textContent=''; }catch(err){ el('auth-error').textContent=mapAuthError(err);} });
-    function mapAuthError(err){ const code=err?.code||''; if(code.includes('auth/invalid-credential')) return 'Anmeldung fehlgeschlagen – prüfe E-Mail/Passwort.'; if(code.includes('auth/weak-password')) return 'Passwort ist zu schwach (mind. 6 Zeichen).'; if(code.includes('auth/email-already-in-use')) return 'Diese E-Mail ist bereits registriert.'; return 'Fehler: '+(err.message||err.toString()); }
+    el('login-form').addEventListener('submit', async (e)=>{
+      e.preventDefault();
+      const email=el('email').value.trim();
+      const pw=el('password').value;
+      el('auth-error').textContent = 'Melde an …';
+      try{
+        await signInWithEmailAndPassword(auth,email,pw);
+        el('auth-error').textContent='';
+      }catch(err){
+        el('auth-error').textContent = mapAuthError(err);
+      }
+    });
+    el('signup').addEventListener('click', async ()=>{
+      const email=el('email').value.trim();
+      const pw=el('password').value;
+      if(!email||!pw){ el('auth-error').textContent='Bitte E-Mail & Passwort ausfüllen.'; return; }
+      try{ await createUserWithEmailAndPassword(auth,email,pw); el('auth-error').textContent=''; }
+      catch(err){ el('auth-error').textContent=mapAuthError(err); }
+    });
+
+    function mapAuthError(err){
+      const code = err?.code || '';
+      if (code.includes('auth/invalid-credential')) return 'Anmeldung fehlgeschlagen – stimmt E-Mail/Passwort?';
+      if (code.includes('auth/user-not-found')) return 'Kein Konto mit dieser E-Mail gefunden.';
+      if (code.includes('auth/wrong-password')) return 'Falsches Passwort.';
+      if (code.includes('auth/too-many-requests')) return 'Zu viele Versuche – bitte später erneut.';
+      if (code.includes('auth/network-request-failed')) return 'Netzwerkfehler – bist du online?';
+      if (code.includes('auth/operation-not-allowed')) return 'E-Mail/Passwort ist in Firebase nicht aktiviert.';
+      if (code.includes('auth/unauthorized-domain')) return 'Domain nicht erlaubt. Füge deine GitHub Pages Domain unter Auth → Authorized domains hinzu.';
+      if (code.includes('auth/invalid-api-key')) return 'API Key/Projekt falsch. Prüfe firebaseConfig.';
+      return 'Fehler: ' + (err.message || String(err));
+    }
 
     let unsubEntries=null, allItems=[]; let budgets={}; let currentUser=null;
 
@@ -259,7 +289,14 @@
 
     // Charts + Budget
     window.__charts=[];
-    function renderCharts(month){ const ctx1=document.getElementById('chart-cumulative').getContext('2d'); const ctx2=document.getElementById('chart-cats').getContext('2d'); const ctx3=document.getElementById('chart-share').getContext('2d'); const labels=Array.from({length:month.days},(_,i)=>String(i+1)); const daily=Array(month.days).fill(0); for(const it of month.items){ const day=new Date(it.date).getDate(); const v=Number(it.amount)||0; daily[day-1]+= (it.type==='income'? v : -v); }
+    function renderCharts(month){
+      if (typeof Chart === 'undefined') { updateBudgetUI(month, sumExpenses(month.items)); return; }
+      const ctx1=document.getElementById('chart-cumulative').getContext('2d');
+      const ctx2=document.getElementById('chart-cats').getContext('2d');
+      const ctx3=document.getElementById('chart-share').getContext('2d');
+      const labels=Array.from({length:month.days},(_,i)=>String(i+1));
+      const daily=Array(month.days).fill(0);
+      for(const it of month.items){ const day=new Date(it.date).getDate(); const v=Number(it.amount)||0; daily[day-1]+= (it.type==='income'? v : -v); }
       const cum=[]; let run=0; for(let i=0;i<month.days;i++){ run+=daily[i]||0; cum.push(run); }
       const cats={}; for(const it of month.items){ const c=(it.category||'Allgemein').trim(); const v=Number(it.amount)||0; cats[c]=(cats[c]||0)+(it.type==='expense'? v:0); }
       const catLabels=Object.keys(cats); const catVals=catLabels.map(k=>cats[k]); const totalExp = catVals.reduce((a,b)=>a+b,0) || 1;
@@ -270,7 +307,6 @@
       const c2=new Chart(ctx2,{type:'bar',data:{labels:catLabels,datasets:[{label:'Ausgaben nach Kategorie (€)',data:catVals,backgroundColor:accent}]},options:{plugins:{legend:{labels:{color:textCol}}},scales:{x:{ticks:{color:textCol}},y:{ticks:{color:textCol}}}}});
       const c3=new Chart(ctx3,{type:'doughnut',data:{labels:catLabels,datasets:[{data:catVals}]},options:{plugins:{legend:{labels:{color:textCol}},tooltip:{callbacks:{label:(ctx)=>{const v=ctx.parsed; const p=((v/totalExp)*100).toFixed(1); return `${ctx.label}: ${v.toLocaleString('de-DE',{style:'currency',currency:'EUR'})} (${p}%)`;}}}}});
       window.__charts.push(c1,c2,c3);
-      // Budget-Progress
       updateBudgetUI(month, totalExp);
     }
 
